<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AntitheftSettings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/enableat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22sdp" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/enableatdesc"
                    android:textColor="@color/preblack"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
            <com.github.angads25.toggle.widget.LabeledSwitch
                android:id="@+id/enableat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="14sp"
                android:layout_gravity="center"
                app:on="false"
                app:textOn="ON"
                app:textOff="OFF"
                app:colorOff="#FFFFFF"
                app:colorOn="#304FFE"
                app:colorBorder="#89898A"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="setlocatecommand"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/locate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22sdp" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/locatedesc"
                    android:maxLines="2"
                    android:textColor="@color/preblack"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:src="@drawable/next"
                    app:tint="#958F8F" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="setblockcommand"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/blockscreen"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22sdp" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/blockscreendesc"
                    android:maxLines="2"
                    android:textColor="@color/preblack"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:src="@drawable/next"
                    app:tint="#958F8F" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="setwipecommand"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/wipetitle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22sdp" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/wipedesc"
                    android:maxLines="2"
                    android:textColor="@color/preblack"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:src="@drawable/next"
                    app:tint="#958F8F" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>